--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1220,4 +1220,9 @@
          applied. -->
     <bool name="config_hasRemovableLid">false</bool>
 
+    <!-- Maximum wallpaper width for devices with very high-res screen (1920x1200)
+         the wallpaper width suggestion by the launcher may be too large for
+         the GPU to handle. -->
+    <integer name="config_wallpaperMaxWidth">-1</integer>
+
 </resources>
