Framework: Switch to the new 4.2 handling of public symbols
With 4.2, non-api public symbols are now kept in the symbols.xml
file and no longer in the public.xml file.  This commit moves the
CyanogenMod required symbols to the proper file.

Thanks to PawitP for pointing it out

Change-Id: Ied3ea11c91eb8e8947a18b11b6d49f3a09bcbee5

Conflicts:
	core/res/res/values/public.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1848,6 +1848,8 @@
   <eat-comment />
 
   <!-- Config.xml entries -->
+  <java-symbol type="bool" name="config_forceDisableHardwareKeyboard" />
+  <java-symbol type="bool" name="config_hasRotationLockSwitch" />
 
   <!-- Telephony -->
   <java-symbol type="bool" name="config_smsSamsungCdmaAlternateMessageIDEncoding" />
@@ -2006,4 +2008,5 @@
   <java-symbol type="string" name="privacy_guard_notification" />
   <java-symbol type="string" name="privacy_guard_notification_detail" />
   <java-symbol type="drawable" name="stat_notify_privacy_guard" />
+
 </resources>
