Samsung STK support
Change-Id: I08d169bc466df290fca838b09f6b0fbea2ac82a8

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml
	telephony/java/com/android/internal/telephony/RILConstants.java

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1841,6 +1841,14 @@
   <java-symbol type="attr" name="actionModeWebSearchDrawable" />
   <java-symbol type="string" name="websearch" />
 
+<!-- ===============================================================
+   Resources added in Carbon
+   =============================================================== -->
+  <eat-comment />
+
+  <!-- Config.xml entries -->
+  <java-symbol type="bool" name="config_samsung_stk" />
+
   <!-- Privacy Guard -->
   <java-symbol type="string" name="privacy_guard_notification" />
   <java-symbol type="string" name="privacy_guard_notification_detail" />
