--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1989,4 +1989,6 @@
   <java-symbol type="string" name="action_null"/>
   <java-symbol type="string" name="action_app"/>
 
+  <!-- Wifi -->
+  <java-symbol type="bool" name="config_wifiApStartInterface" />
 </resources>
