Add another AwesomeAction
Add Quick Ssettings action to AwesomeConstants, etc

Plus fix some derps from previous commits

Change-Id: I97d937624f8ddbdc1bb44ff6275d3427aa897887

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1978,6 +1978,7 @@
   <java-symbol type="string" name="action_lastapp"/>
   <java-symbol type="string" name="action_power"/>
   <java-symbol type="string" name="action_notifications"/>
+  <java-symbol type="string" name="action_quicksettings"/>
   <java-symbol type="string" name="action_assist"/>
   <java-symbol type="string" name="action_clockoptions"/>
   <java-symbol type="string" name="action_voiceassist"/>
