--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1898,6 +1898,9 @@
   <java-symbol type="bool" name="config_multiColorBatteryLed" />
   <java-symbol type="array" name="notification_light_package_mapping" />
 
+  <!-- Notification vibrate alert during call -->
+  <java-symbol type="array" name="config_notificationNoAlertsVibePattern" />
+
   <!-- Power menu -->
   <java-symbol type="string" name="global_action_screenshot" />
   <java-symbol type="string" name="global_action_torch" />
