Add Halo and Dark Carbon toggle back.

--- a/packages/SystemUI/res/values/strings_toggles.xml
+++ b/packages/SystemUI/res/values/strings_toggles.xml
@@ -53,4 +53,6 @@
     <string name="toggle_STAYAWAKE">Stay Awake</string>
     <string name="toggle_WIRELESSADB">Wireless ADB</string>
     <string name="toggle_MUSIC">Music</string>
+    <string name="toggle_HALO">Halo</string>
+    <string name="toggle_TRDS">Dark Carbon</string>
 </resources>
