--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -154,6 +154,7 @@
       <item name="android:layout_marginRight">4dp</item>
       <item name="android:paddingBottom">1dp</item>
       <item name="android:layout_gravity">left|bottom</item>
+      <item name="android:fontFamily">sans-serif-condensed</item>
       <item name="android:textSize">11dp</item>
       <item name="android:textStyle">bold</item>
       <item name="android:shadowColor">#FF000000</item>
@@ -166,14 +167,15 @@
       <item name="android:layout_marginRight">9.5dp</item>
       <item name="android:paddingBottom">1dp</item>
       <item name="android:layout_gravity">left|bottom</item>
+      <item name="android:fontFamily">sans-serif-condensed</item>
       <item name="android:textSize">12dp</item>
       <item name="android:textStyle">normal</item>
-      <item name="android:textColor">@android:color/holo_blue_light</item>
     </style>
 
     <style name="Battery_Center">
       <item name="android:layout_marginRight">0dp</item>
       <item name="android:layout_gravity">center</item>
+      <item name="android:fontFamily">sans-serif-condensed</item>
       <item name="android:textSize">9dp</item>
       <item name="android:textStyle">bold</item>
       <item name="android:shadowColor">#FF000000</item>
@@ -195,8 +197,6 @@
         <item name="android:textSize">14dp</item>
         <item name="android:textColor">#ff3a3b39</item>
     </style>
-    
-    
 
     <style name="TextAppearance.QuickSettings.TileView.User" parent="@style/TextAppearance.QuickSettings.TileView">
         <item name="android:background">#CC000000</item>
